Struktur überarbeitet und Frontend fertig. README Erstellt

--- a/partietabelle.html
+++ b/partietabelle.html
@@ -90,7 +90,7 @@
           <div class="row">
             <div class="col-1 align-self-center p-0">
               <div id="roundInfoTransform">
-                Round 
+                Runde 
                 <span class="currentRound">
                   1
                 </span>
@@ -98,11 +98,11 @@
             </div>
             <div class="col-11 align-content-center p-0 pe-2">
               <div class="container">
-                <div id="playerRow" class="row" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Name">
+                <div id="playerRow" class="row" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Spielername">
                   <div class="col-3 playerName">
                     <span id="player1" class="position-relative">
                       a
-                      <span id="shufflerSpan" class="position-absolute top-50 start-100 translate-middle" style="padding-left: 20px" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Dealer">
+                      <span id="shufflerSpan" class="position-absolute top-50 start-100 translate-middle" style="padding-left: 20px" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Geber">
                         <i class="bi-files">
 
                         </i>
@@ -125,7 +125,7 @@
                     </span>
                   </div>
                 </div>
-                <div id="scoreRow" class="row" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Total score">
+                <div id="scoreRow" class="row" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Gesamtpunktzahl">
                   <div class="col-3">
                     <h4><span id="points1" class="badge text-bg-light">
                       0
@@ -154,55 +154,55 @@
                   </h4>
                 </div>
               </div>
-              <div class="row" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Bid">
+              <div class="row" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Schätzung">
                 <div class="col-3 inputField"> 
-                  <input type="text" class="form-control bid inputBold" placeholder="Bid" id="bid1" inputmode="numeric" pattern="[0-9]*" oninput="validateNumber(this);" style="text-align: center;"> 
+                  <input type="text" class="form-control bid inputBold" placeholder="Schätzung" id="bid1" inputmode="numeric" pattern="[0-9]*" oninput="validateNumber(this);" style="text-align: center;"> 
                   <div class="invalid-feedback">
-                    Invalid count
+                    Ungültige Zahl
                   </div> 
                 </div>
                 <div class="col-3 inputField"> 
-                  <input type="text" class="form-control bid inputBold" placeholder="Bid" id="bid2" inputmode="numeric" pattern="[0-9]*" oninput="validateNumber(this);" style="text-align: center;"> 
+                  <input type="text" class="form-control bid inputBold" placeholder="Schätzung" id="bid2" inputmode="numeric" pattern="[0-9]*" oninput="validateNumber(this);" style="text-align: center;"> 
                   <div class="invalid-feedback">
-                    Invalid count
+                    Ungültige Zahl
                   </div> 
                 </div>
                 <div class="col-3 inputField"> 
-                  <input type="text" class="form-control bid inputBold" placeholder="Bid" id="bid3" inputmode="numeric" pattern="[0-9]*" oninput="validateNumber(this);" style="text-align: center;"> 
+                  <input type="text" class="form-control bid inputBold" placeholder="Schätzung" id="bid3" inputmode="numeric" pattern="[0-9]*" oninput="validateNumber(this);" style="text-align: center;"> 
                   <div class="invalid-feedback">
-                    Invalid count
+                    Ungültige Zahl
                   </div> 
                 </div>
                 <div class="col-3 inputField"> 
-                  <input type="text" class="form-control bid inputBold" placeholder="Bid" id="bid4" inputmode="numeric" pattern="[0-9]*" oninput="validateNumber(this);" style="text-align: center;"> 
+                  <input type="text" class="form-control bid inputBold" placeholder="Schätzung" id="bid4" inputmode="numeric" pattern="[0-9]*" oninput="validateNumber(this);" style="text-align: center;"> 
                   <div class="invalid-feedback">
-                    Invalid count
+                    Ungültige Zahl
                   </div> 
                 </div>
               </div>
-              <div class="row" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Actual">
+              <div class="row" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Tatsächliche Stiche">
                 <div class="col-3 inputField"> 
-                  <input type="text" class="form-control actual inputBold" placeholder="Actual" id="actual1" inputmode="numeric" pattern="[0-9]*" oninput="validateNumber2(this);" style="text-align: center;"> 
+                  <input type="text" class="form-control actual inputBold" placeholder="Stiche" id="actual1" inputmode="numeric" pattern="[0-9]*" oninput="validateNumber2(this);" style="text-align: center;"> 
                   <div class="invalid-feedback">
-                    Invalid count
+                    Ungültige Zahl
                   </div> 
                 </div>
                 <div class="col-3 inputField"> 
-                  <input type="text" class="form-control actual inputBold" placeholder="Actual" id="actual2" inputmode="numeric" pattern="[0-9]*" oninput="validateNumber2(this);" style="text-align: center;"> 
+                  <input type="text" class="form-control actual inputBold" placeholder="Stiche" id="actual2" inputmode="numeric" pattern="[0-9]*" oninput="validateNumber2(this);" style="text-align: center;"> 
                   <div class="invalid-feedback">
-                    Invalid count
+                    Ungültige Zahl
                   </div> 
                 </div>
                 <div class="col-3 inputField"> 
-                  <input type="text" class="form-control actual inputBold" placeholder="Actual" id="actual3" inputmode="numeric" pattern="[0-9]*" oninput="validateNumber2(this);" style="text-align: center;"> 
+                  <input type="text" class="form-control actual inputBold" placeholder="Stiche" id="actual3" inputmode="numeric" pattern="[0-9]*" oninput="validateNumber2(this);" style="text-align: center;"> 
                   <div class="invalid-feedback">
-                    Invalid count
+                    Ungültige Zahl
                   </div> 
                 </div>
                 <div class="col-3 inputField"> 
-                  <input type="text" class="form-control actual inputBold" placeholder="Actual" id="actual4" inputmode="numeric" pattern="[0-9]*" oninput="validateNumber2(this);" style="text-align: center;"> 
+                  <input type="text" class="form-control actual inputBold" placeholder="Stiche" id="actual4" inputmode="numeric" pattern="[0-9]*" oninput="validateNumber2(this);" style="text-align: center;"> 
                   <div class="invalid-feedback">
-                    Invalid count
+                    Ungültige Zahl
                   </div> 
                 </div>
               </div>
@@ -217,13 +217,13 @@
                         <i class="bi-box-arrow-in-down pe-1">
 
                         </i>
-                        Finish round 
+                        Runde abschließen 
                         <span id="SubmitRound">
                           1
                         </span>
                       </button> 
                     </div> 
-                    <div class="p-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Undo last round"> 
+                    <div class="p-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Letzte Runde rückgängig machen"> 
                       <button type="button" class="btn btn-danger" id="undoButton" data-bs-toggle="modal" data-bs-target="#modalUndoRound" disabled="">
                         <i class="bi-arrow-counterclockwise">
 
@@ -245,21 +245,21 @@
           <div class="modal-content"> 
             <div class="modal-header"> 
               <h1 class="modal-title fs-5" id="modalUndoRoundLabel">
-                Undo last round?
+                Letzte Runde rückgängig machen?
               </h1> 
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
 
               </button> 
             </div> 
             <div id="modalUndoRoundBody" class="modal-body">
-              Do you really want to undo last round? 
+              Möchtest du die letzte Runde wirklich rückgängig machen? 
             </div> 
             <div class="modal-footer"> 
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-                No
+                Nein
               </button> 
               <button type="button" class="btn btn-danger" data-bs-dismiss="modal" onclick="undoRound()">
-                Yes, undo
+                Ja, rückgängig machen
               </button> 
             </div> 
           </div> 
@@ -272,18 +272,18 @@
           <div class="modal-content"> 
             <div class="modal-header"> 
               <h1 class="modal-title fs-5" id="modalCheckRuleMaxGuessLabel">
-                Number of tricks exceeds round number
+                Anzahl der Stiche überschreitet Rundenzahl
               </h1> 
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
 
               </button> 
             </div> 
             <div id="modalCheckRuleMaxGuessBody" class="modal-body"> 
-              Invalid total of actual tricks. The maximum number of tricks to be taken in this round is x 
+              Ungültige Gesamtzahl der tatsächlichen Stiche. Die maximale Anzahl der Stiche in dieser Runde ist x 
             </div> 
             <div class="modal-footer"> 
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-                Close
+                Schließen
               </button> 
             </div> 
           </div> 
@@ -308,7 +308,7 @@
           <div class="modal-content"> 
             <div class="modal-header"> 
               <h1 class="modal-title fs-5" id="modalFeedbackLabel">
-                Send feedback or found a problem?
+                Feedback senden oder Problem gefunden?
               </h1> 
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
 
@@ -326,10 +326,10 @@
             </div> 
             <div class="modal-footer"> 
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-                Cancel
+                Abbrechen
               </button> 
               <button type="button" class="btn btn-primary" data-bs-dismiss="modal" onclick="sendFeedback()">
-                Send
+                Senden
               </button> 
             </div> 
           </div> 
@@ -343,7 +343,7 @@
     
   </p>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <script type="module" src="punktetabelle_bauen.js"></script>
+  <script type="module" src="ui-handlers.js"></script>
 </body>
 
 </html>
