clean up: deleted unneccesary stuff renamed stuff

--- a/frontend/partietabelle.html
+++ b/frontend/partietabelle.html
@@ -6,14 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WIZARD</title>
   <link rel='stylesheet' href='/static/partietabelle.css'>
-  <script type="importmap">
-    {
-      "imports": {
-        "partieberechnungen": "./partieberechnungen.js"
-      }
-    }
   </script>
-    <script src="https://code.jquery.com/jquery-4.0.0.js"></script>
+    <script defer src="https://code.jquery.com/jquery-4.0.0.js"></script>
 </head>
 
   
@@ -76,9 +70,9 @@
 
     
 
-  <script src="https://unpkg.com/lucide@latest"></script>
-  <script>lucide.createIcons();</script>
-  <script src="/static/test.js"></script>
+  <script defer src="https://unpkg.com/lucide@latest"></script>
+  <script defer>lucide.createIcons();</script>
+  <script src="/static/partietabelle.js"></script>
 </body>
 
 </html>
