feat: Add Docker Compose configuration and implement point table functionality

--- a/frontend/partie.html
+++ b/frontend/partie.html
@@ -13,7 +13,8 @@
   <script type="importmap">
     {
       "imports": {
-        "partieberechnungen": "./partieberechnungen.js"
+        "partieberechnungen": "./partieberechnungen.js",
+        "partietabelle": "./partietabelle.js"
       }
     }
   </script>
